3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

 server/plugins.c: wrong case - FLAG_FRIENDLY is not the same as friendlylist :)
 plugins/cfpython/cfpython_object.c: add 'IsPet' and 'AttackMovement'
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-15

server/skills.c: EVENT_TRIGGER for magical scroll writing.
Nicolas Weeger 2007-04-15

server/cfpython.c: add AttackType, AttackTypeNumber, EventType constants.
Nicolas Weeger 2007-04-15

common/living.c: fix comments.
common/object.c: dump owner too.
server/plugins.c: check values for cfapi_map_get_object_at(). Handle FLAG_FRIENDLY
 and friendlist.
Nicolas Weeger 2007-04-15

Enable plugins to change the 'path' property of a map.
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/include/cfpython_map_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-15

Add plugin wrapper for cf_get_empty_map(). Add 'Object.GodGiven' and 'Crossfire.CreateMap'.
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-14

Remove obsolete command_build function.
 include/sproto.h
 server/c_object.c commands.c
Nicolas Weeger 2007-04-14

Correctly clear god information.
 common/holy.c
Nicolas Weeger 2007-04-14

Remove unused godlink::pantheon field.
 common/holy.c
 include/god.h
Nicolas Weeger 2007-04-14

Remove unused (and obsolete) current_weapon_script field.
Remove now unused find_best_weapon_used_match().
 common/loader.l object.c
 crossedit/Attr.c
 include/libproto.h object.h
 server/apply.c skill_util.c