@@ -15,6 +15,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Wrap change_exp() function. Make 'exp' property the same as others.
+ include/sproto.h
+ plugins/cfpython/cfpython_object.c
+ plugins/cfpython/include/Makefile.in
+ plugins/cfpython/include/cfpython_object_private.h
+ plugins/common/include/plugin_common.h
+ plugins/common/plugin_common.c
+Nicolas Weeger 2007-04-15
+
  server/plugins.c: wrong case - FLAG_FRIENDLY is not the same as friendlylist :)
  plugins/cfpython/cfpython_object.c: add 'IsPet' and 'AttackMovement'
  plugins/cfpython/include/cfpython_object_private.h
